--- a/app/views/add_new.erb
+++ b/app/views/add_new.erb
@@ -1,13 +1,17 @@
-<h1> Submit a new link </h1>
+<h1> New link </h1>
 
 <form action='/link' method='POST'>
   <label for='title'>
     Title:
-    <input type='text' name='bookmark_name'>
+    <input type='text' name='title'>
   </label>
   <label for='url'>
     URL:
     <input type='text' name='url'>
+  </label>
+  <label for 'tags'>
+    Tags:
+    <input type ='text' name='tags'>
   </label>
   <input type='submit' value='create link'>
 </form>
