--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,11 +2,23 @@
 
 <form action='/signup' method='POST'>
   <label for='email'>
-    Email: <input name='email' type='text'>
+    Email: <input name='email' type='email' value='<%= @user.email %>' required>
   </label>
   <label for='password'>
     Password: <input name='password' type='password'>
   </label>
+  <label for='password_confirmation'>
+    Password confirmation: <input name='password_confirmation' type='password'>
+  </label>
   </label>
   <input type='submit' value='register'>
 </form>
+
+<% if flash[:errors] && !flash[:errors].empty? %>
+  Please refer to the following errors below:
+  <ul id='errors'>
+    <% flash[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
