--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,10 +7,18 @@
   <body>
     <% if current_user %>
       Welcome, <%= current_user.email %>
+      <form method='post' action='/signin'>
+        <input type='hidden' name='_method' value='delete'>
+        <input type='submit' value='Sign out'>
+      </form>
     <% end %>
+
     <% if flash[:notice] %>
-  <div id='notice'><%= flash[:notice] %></div>
-<% end %>
+      <div id='notice'>
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+
     <%= yield %>  <!-- this then yields to the view which has been called by your controller -->
   </body>
 </html>
